add a happy paragraph to my file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Denis Kaniu">
     <link rel="icon" href="doodle-favicon.png">
     <link rel="stylesheet" href="style.css">
-		<title>Denis Kaniu - Doodle </title>
+		<title>Denis Kaniu - Goodle </title>
 	</head>
 	<!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -41,6 +41,9 @@
 
 
 	<body class = "container-fluid">
+	
+	<p> this is denis kaniu writing </p>
+	
 	<div class = "center">
 		<img src="doodle.png" class="img-responsive">
 		<form class="form-horizontal">
